# compose-av

./: .gitattributes  .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  shell.nix
.github/: dependabot.yml
.github/actions/setup-native/: action.yml
.github/workflows/: build.yaml  publish.yaml  pull-request.yaml
.teamcity/: pom.xml  settings.kts
.teamcity/patches/vcsRoots/: HttpsGithubComSileniumDevComposeAvRefsHeadsMain.kts
build-logic/: build.gradle.kts
gradle/: libs.versions.toml
mpv/: build.sh
mpv/subprojects/: libplacebo.wrap
native/: .clang-format  .gitignore  CMakeLists.txt  build.gradle.kts  ffmpeg-config.nix  flake.nix  main.cpp  meson.build  mpv-config.nix  shell.nix
native/cross/: linux-arm64.txt
native/nix/: ffmpeg-config.nix
native/shells/: linux-arm64.nix
native/src/: EGL.h  VA.cpp  drm_mapping.cpp  drm_mapping.h  errors.cpp  errors.h  meson.build  rationals.cpp  rationals.h
native/src/cpp/data/: AVBufferRef.cpp  AVCodecID.cpp  AVCodecParameters.cpp  AVPixelFormat.cpp  Frame.cpp  FramePadMetadata.cpp  FramePadMetadata.hpp  Packet.cpp
native/src/cpp/decode/: Decoder.cpp  DecoderContext.cpp  DecoderContext.h  SoftwareDecoder.cpp
native/src/cpp/demux/: Demuxer.cpp  Demuxer.hpp  FileDemuxer.cpp  Stream.cpp
native/src/cpp/helper/: buffers.cpp  buffers.hpp  errors.cpp  errors.hpp  formats.hpp  rationals.cpp
native/src/cpp/hw/: DeviceContext.cpp  FramesContext.cpp
native/src/cpp/mpv/: MPV.cpp
native/src/cpp/platform/linux/: Errors.cpp  VAEGLInteropImage.cpp  VAEGLInteropImage.hpp  VAEGLRenderInterop.cpp  VAGLInteropImage.cpp  VAGLXInteropImage.cpp  VAGLXInteropImage.hpp  VAGLXRenderInterop.cpp  VaapiDecoder.cpp  VaapiDeviceContext.cpp  VaapiYuvToRgbConversion.cpp  VaapiYuvToRgbConversion.hpp
native/src/cpp/platform/linux/helper/: EGL.hpp  drm_mapping.hpp  va.cpp  va.hpp
native/src/cpp/render/: GLInteropImage.cpp  SoftwareGLInteropImage.cpp  SoftwareGLRenderInterop.cpp  Swizzles.cpp  Swizzles.hpp
native/src/cpp/util/: AVBuffer.cpp  Errors.cpp
native/src/data/: AVCodecID.cpp  AVPixelFormat.cpp  Frame.cpp  Packet.cpp  PixelFormat.cpp
native/src/decode/: Decoder.cpp  SoftwareDecoder.cpp  VaapiDecoder.cpp
native/src/demux/: FileDemuxer.cpp  Stream.cpp
native/src/helper/: errors.cpp  errors.hpp  formats.hpp  rationals.cpp
native/src/mpv/: MPV.cpp  mpv_linux.cpp  mpv_windows.cpp
native/src/platform/linux/: Errors.cpp  VAGLInteropImage.cpp  VAGLInteropImage.hpp  VAGLRenderInterop.cpp  VaapiDecoder.cpp
native/src/platform/linux/helper/: drm_mapping.cpp
native/src/render/: GLInteropImage.cpp  GLInteropImage.hpp  SoftwareGLInteropImage.hpp
native/src/util/: EGL.cpp  EGL.hpp  Errors.cpp  drm_mapping.cpp  errors.cpp  errors.hpp  rationals.cpp
native/subprojects/: mpv.wrap
native/subprojects.tpl/linux/packagefiles/mpv/subprojects/: ffmpeg.wrap  fmt.wrap  fribidi.wrap  libdisplay-info.wrap  libuchardet.wrap  openal-soft.wrap
native/subprojects.tpl/linux/packagefiles/mpv/subprojects/packagefiles/libass/subprojects/: libfontconfig.wrap
native/subprojects.tpl/windows/packagefiles/mpv/: meson.build
native/subprojects/packagefiles/mpv/subprojects/: ffmpeg.wrap  fmt.wrap  freetype.wrap  freetype2.wrap  libass.wrap  libdisplay-info.wrap  libjpeg-turbo.wrap  libuchardet.wrap
native/subprojects/packagefiles/mpv/subprojects/packagefiles/libass/subprojects/: libfontconfig.wrap
natives/: .gitignore  build.gradle.kts  flake.nix  meson.build
natives/nix/: mpv-config.nix
natives/src/: meson.build
natives/src/helper/: JniCallRef.hpp  JniMpvCallback.cpp  JniMpvCallback.hpp  MpvCallback.hpp  errors.cpp  results.cpp  results.hpp
natives/src/jni/: commands.cpp  lifecycle.cpp  properties_async.cpp  properties_sync.cpp  render.cpp
natives/src/mpv/: MPV.cpp  MPVException.cpp  MPVException.hpp  MPV_.cpp  commands.cpp  events.cpp  instance.cpp  instance.hpp  lifecycle.cpp  nodes.cpp  nodes.hpp  observe.cpp  properties_async.cpp  properties_sync.cpp  render.cpp  renderer.hpp
natives/src/util/: Errors.cpp
natives/subprojects/: jni-headers.wrap
natives/subprojects.tpl/windows/packagefiles/mpv/: meson.build
os-utils/: build.gradle.kts
os-utils-plugin/: build.gradle.kts  settings.gradle.kts
os-utils/src/main/templates/dev/silenium/multimedia/: BuildConstants.kt
src/main/kotlin/: Main.kt
src/main/kotlin/dev/silenium/multimedia/data/: AVChromaLocation.kt  AVCodecID.kt  AVColorPrimaries.kt  AVColorRange.kt  AVColorSpace.kt  AVColorTransferCharacteristics.kt  AVMediaType.kt  AVPixelFormat.kt  ColorChannels.kt  FFmpegEnum.kt  Frame.kt  NativeCleanable.kt  NativePointer.kt  Packet.kt  PixelFormat.kt  Rational.kt
src/main/kotlin/dev/silenium/multimedia/decode/: Codec.kt  Decoder.kt  SoftwareDecoder.kt  VaapiDecoder.kt
src/main/kotlin/dev/silenium/multimedia/demux/: Demuxer.kt  FileDemuxer.kt  Stream.kt
src/main/kotlin/dev/silenium/multimedia/flow/: ChannelSource.kt  Channels.kt  FlowSource.kt  Flows.kt  Sink.kt
src/main/kotlin/dev/silenium/multimedia/mpv/: MPV.kt
src/main/kotlin/dev/silenium/multimedia/player/: Player.kt  PlayerStats.kt
src/main/kotlin/dev/silenium/multimedia/render/: GLInteropImage.kt  GLRenderInterop.kt  Swizzles.kt
src/main/kotlin/dev/silenium/multimedia/rewrite/: LocalWindow.kt  VideoPlayer.kt
src/main/kotlin/dev/silenium/multimedia/util/: Errors.kt  NativeLoader.kt  Resources.kt  Results.kt
src/main/kotlin/dev/silenium/multimedia/vaapi/: VA.kt
src/main/kotlin/dev/silenium/va/: VA.kt
src/main/resources/shaders/: video.frag  video.vert
src/main/templates/dev/silenium/compose/av/: BuildConstants.kt
src/main/templates/dev/silenium/multimedia/: BuildConstants.kt
src/test/kotlin/dev/silenium/compose/av/: Main.kt
src/test/kotlin/dev/silenium/multimedia/compose/: Main.kt
src/test/kotlin/dev/silenium/multimedia/decode/: SoftwareDecoderTest.kt  VaapiDecoderTest.kt
src/test/kotlin/dev/silenium/multimedia/demux/: FileDemuxerTest.kt
src/test/kotlin/dev/silenium/multimedia/rewrite/: Main.kt
src/test/resources/: video.webm
(+118 files in other folders)
